--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <h1>Editorial Denes</h1>
         <p>Disculpeu les molèsties, tenim problemes tècnics, pàgina inoperativa temporalment. Podeu contactar-nos per:</p>
-        <p>Email: <a href="mailto:administracio@editorialdenes.com">administracio@editorialdenes.com</a></p>
+        <p>Email: <a href="mailto:denes@editorialdenes.com">administracio@editorialdenes.com</a></p>
         <p>Facebook: <a href="https://www.facebook.com/EditorialDenes" target="_blank">https://www.facebook.com/EditorialDenes</a></p>
     </div>
 </body>
